--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,24 +1,14 @@
 
 <div class="article-post">
- </br>
- <p style="text-align: center;"><strong>Nossos Links:</strong></p>
- <p style="text-align: center;"><a title="Projeto Lar Bonito Lar" href="https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/">Projeto Lar Bonito Lar</a> | <a title="Facebook" href="https://www.facebook.com/TrololoMulher/">Facebook</a> | <a title="Instagram" href="https://www.instagram.com/trololodemulher/">Instagram</a><br /><br /></p>
- </br>
- </br>
-<p style="text-align: center;"><strong>Cadastre seu email e receba sua newsletter gratuitamente.</strong></p>
-
-                    <form class="form-inline" style="text-align: center;" action="https://getsimpleform.com/messages?form_api_token=97ae79eeaf7eef692a2a759aa30bea5a" method="post">
-			<input type='hidden' name='redirect_to' value='https://www.trololodemulher.com.br/Obrigado-por-Assinar-a-Newsletter/' />
-                        <div class="form-group">
-                            <input type="text" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" placeholder="Email" id="email-header14-a">
-                        </div>
-                        <div class="buttons-wrap">
-                            <input class="btn btn-primary display-4" type="submit" value='ASSINE' role="button" />
-                        </div>
-                    </form>
-
-
+  </br>
+  <p style="text-align: center;"><strong>Nossos Links:</strong></p>
+  <p style="text-align: center;"><a title="Projeto Lar Bonito Lar" href="https://www.trololodemulher.com.br/Projeto-Lar-Bonito-Lar/">Projeto Lar Bonito Lar</a> | <a title="Facebook" href="https://www.facebook.com/TrololoMulher/">Facebook</a> | <a title="Instagram" href="https://www.instagram.com/trololodemulher/">Instagram</a><br /><br /></p>
+  </br>
+ 
+  <p style="text-align: center;"><strong>Cadastre seu email e receba sua newsletter gratuitamente.</strong></p>
+  <form style="text-align: center;" action="https://getsimpleform.com/messages?form_api_token=97ae79eeaf7eef692a2a759aa30bea5a" method="post">
+    <input type='hidden' name='redirect_to' value='https://www.trololodemulher.com.br/Obrigado-por-Assinar-a-Newsletter/' />
+    <input type="text"  name="email"  placeholder="Email" >
+    <input class="btn btn-primary display-4" type="submit" value='ASSINE' role="button" />
+  </form>
 </div>
-
-
-
