--- a/_includes/meta/social.html
+++ b/_includes/meta/social.html
@@ -1,4 +1,7 @@
 {% include meta/social/facebook.html %} 
 {% include meta/social/twitter.html %}
 {% include meta/social/google.html %}
-{% include meta/social/json_ld.html %}
+
+{% comment %}
+   {% include meta/social/json_ld.html %} 
+{% endcomment %}
