--- a/_includes/meta/social/json_ld.html
+++ b/_includes/meta/social/json_ld.html
@@ -10,10 +10,8 @@
       "@type": "{{ type }}",
       "@id": "{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"
     },
-    "name": "{{ page.title | default: site.title }}",
-{% comment %}    
-    "keywords": "{% if page.tags %}{{ page.tags | join: ',' | jsonify }}{% endif %}",
-{% endcomment %}    
+    "name": "{{ page.title | default: site.title }}", 
+    "keywords": {% if page.tags %}{{ page.tags | join: ',' | jsonify }}{% endif %},  
     "articleBody": {{ page.content | strip_html | xml_escape | normalize_whitepace | strip_newlines | strip | jsonify }},    
     "headline": "{{ page.title | default: site.title }}",
     "description": "{% if page.meta_description %}{{ page.meta_description | strip_html | strip_newlines | truncate: 140 }}{% else %}{{ site.meta_description }}{% endif %}",
@@ -29,7 +27,7 @@
   {% endif %}  
     "author": {
       "@type": "Person",
-      "name": "{{ site.authors[page.author].display_name | jsonify }}"
+      "name": {{ site.authors[page.author].display_name | jsonify }}
       "email": {{ site.authors[page.author].email | jsonify }} ,
       "gender": "{{ site.authors[page.author].gender }}",
       "birthDate": "{{ site.authors[page.author].birthDate }}",      
@@ -48,8 +46,8 @@
     },  
     "publisher": {
       "@type": "Organization",
-      "name": "{{ site.title | jsonify }}",
-      "description": "{{ site.meta_description | jsonify }}",
+      "name": {{ site.title | jsonify }},
+      "description": {{ site.meta_description | jsonify }},
       "url": "{{ site.url }}",      
       "logo": {
         "@type": "ImageObject",
