--- a/_includes/meta/social/json_ld.html
+++ b/_includes/meta/social/json_ld.html
@@ -27,7 +27,7 @@
   {% endif %}  
     "author": {
       "@type": "Person",
-      "name": {{ site.authors[page.author].display_name | jsonify }}
+      "name": {{ site.authors[page.author].display_name | jsonify }},
       "email": {{ site.authors[page.author].email | jsonify }} ,
       "gender": "{{ site.authors[page.author].gender }}",
       "birthDate": "{{ site.authors[page.author].birthDate }}",      
