--- a/_includes/meta/social/json_ld.html
+++ b/_includes/meta/social/json_ld.html
@@ -53,7 +53,7 @@
       "url": "{{ site.url }}",      
       "logo": {
         "@type": "ImageObject",
-        "url": ""{{ site.url | append: site.logo }}",
+        "url": "{{ site.url | append: site.logo }}",
         "width": 194,
         "height": 194
       },
