--- a/_includes/meta/social/json_ld.html
+++ b/_includes/meta/social/json_ld.html
@@ -53,7 +53,7 @@
       "url": "{{ site.url }}",      
       "logo": {
         "@type": "ImageObject",
-        "url": "{{ site.logo | prepend: site.baseurl | prepend: site.url }} }}",
+        "url": "{{ site.logo | prepend: site.baseurl | prepend: site.url }}",
         "width": 194,
         "height": 194
       },
