--- a/_includes/meta/social/facebook.html
+++ b/_includes/meta/social/facebook.html
@@ -1,5 +1,5 @@
 <meta property="fb:app_id" content="{{ site.facebook.app_id }}" />
-<meta property=”fb:admins” content="{{ site.facebook.admin_id }}" />
+{% comment %}<meta property=”fb:admins” content="{{ site.facebook.admin_id }}" />{% endcomment %}
 <meta property="og:site_name" content="{{ site.title }}">
 <meta property="og:locale" content="pt_BR" />
 <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
