--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,15 @@
 	display:inline;
 }
 
+.image-wrapper {
+    text-align: center;
+
+    .image-caption {
+        color: $grey-color;
+        margin-top: $spacing-unit / 3;
+    }
+}
+
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
 	"syntax"
