--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,7 +12,7 @@
     text-align: center;
 
     .image-caption {
-        color: $grey-color;
+        color: #828282;
         margin-top: $spacing-unit / 3;
     }
 }
