--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@
 .post-excerpt p {
 	display:inline;
 }
-
+/* 
 .image-wrapper {
     text-align: center;
 
@@ -16,7 +16,7 @@
         margin-top: $spacing-unit / 3;
     }
 }
-
+*/
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
 	"syntax"
