--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,12 +29,11 @@ post_class: post-template
 	      
          <!-- Post Featured Image -->
          {% if page.image %}
-	    <div class="image-wrapper" >
+<figure>
 	        <img class="featured-image img-fluid" src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | absolute_url }}{% endif %}" alt="{{ page.title }}" title="{{ page.title }}">
                <!-- {% if include.caption %}-->
-                  <p class="image-caption">{{ page.title }}</p>
-               <!-- {% endif %} -->
-	    </div>		    
+   <figcaption>{{ page.title }}</figcaption>
+</figure>		    
             <link itemprop="thumbnailUrl" href="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | absolute_url }}{% endif %}"> 
             <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> 
               <link itemprop="url" href="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | absolute_url }}{% endif %}"> 
