--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ post_class: post-template
          <div class="mainheading">
             <!-- Post Title -->
             <h1 class="posttitle">{{ page.title }}</h1> 
-            <!-- Post Date -->
+            <!-- Post Author -->
             <small>Por: {{ author.display_name }}
 		{% if page.date %}
                 <span class="post-date"><time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time></span>           
@@ -27,56 +27,20 @@ post_class: post-template
             </small>			 
          </div>
 	      
-         <!-- Post Featured Image -->
-         {% if page.image %}
- <!--<figure>-->
-	        <img class="featured-image img-fluid" src="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | absolute_url }}{% endif %}" alt="{{ page.title }}" title="{{ page.title }}">
-   <!--<figcaption>{{ page.title }}</figcaption>-->
- <!--</figure>	-->	    
-            <link itemprop="thumbnailUrl" href="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | absolute_url }}{% endif %}"> 
-            <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> 
-              <link itemprop="url" href="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | absolute_url }}{% endif %}"> 
-            </span>	      
-	 {% endif %}
 	      
-	      <!--
-<meta itemscope itemtype="http://schema.org/Article" />
-<meta itemprop="headline" content="{{ page.title }}" />
-<meta itemprop="description" content="{{ page.meta_description }}" />
-<meta itemprop="image" content="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | absolute_url }}{% endif %}" />
--->
+        {% include post_featured_image.html %}	      
+	      
 	      
          <!-- Post Content -->
          <div class="article-post">
             {{content}}
          </div>
             
-         <!-- Post Categories -->
-         <div class="after-post-tags">
-            <ul class="tags">
-               {% assign sortedCategories = page.categories | sort %}
-               {% for category in sortedCategories %}
-                  <li>
-                     <a href="{{ site.baseurl }}/category/{{ category | slugify }}/">{{ category }}</a>
-                  </li>
-               {% endfor %}
-            </ul>
-         </div>
-	      
- {% include links.html %}	      
-         
-	 <!-- Prev/Next -->
-         <div class="row PageNavigation d-flex justify-content-between font-weight-bold">
-            {% if page.previous.url %}
-               <a class="prev d-block col-md-6" href="{{page.previous.url | absolute_url}}"> &laquo; {{page.previous.title}}</a>
-            {% endif %}
-            {% if page.next.url %}
-               <a class="next d-block col-md-6 text-lg-right" href="{{page.next.url | absolute_url}}">{{page.next.title}} &raquo; </a>
-            {% endif %}
-            <div class="clearfix"></div>
-         </div>
+         {% include post_categories.html %}	      
+         {% include links.html %}
+         {% include newsletter.html %}	
+         {% include pagination_post.html %}		       
+
       </div>
    </div>
 </div>
-
-{% include comments.html %}
