--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,8 +38,8 @@ post_class: post-template
             
          {% include post_categories.html %}	      
          {% include links.html %}
-         {% include newsletter.html %}	
-         {% include pagination_post.html %}		       
+         {% include post)newsletter.html %}	
+         {% include post_pagination.html %}		       
 
       </div>
    </div>
