--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,8 +37,8 @@ post_class: post-template
          </div>
             
          {% include post_categories.html %}	      
-         {% include links.html %}
-         {% include post)newsletter.html %}	
+         {% include post_links.html %}
+         {% include post_newsletter.html %}	
          {% include post_pagination.html %}		       
 
       </div>
