--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,9 +38,11 @@ post_class: post-template
             
          {% include post_categories.html %}	      
          {% include post_links.html %}
-         {% include post_newsletter.html %}	
+         {% include post_newsletter.html %}
+	 {% include post_recent.html %}
+	 {% comment %}
          {% include post_pagination.html %}		       
-
+	 {% endcomment %}
       </div>
    </div>
 </div>
