--- a/_includes/post_recent.html
+++ b/_includes/post_recent.html
@@ -3,7 +3,7 @@
   <div class="recent-list">
     {% for post in site.posts offset:0 limit:4 %}
       {% if post.title %}
-        <a href="{{ post.url | absolute_url }}" class="recent-item" style="background: url({{ post.image }}) center no-repeat; background-size: cover;"><span>{{ post.title }}</span></a>
+        <a href="{{ post.url | absolute_url }}" class="recent-item" style="background: url({{ post.image | absolute_url}}) center no-repeat; background-size: cover;"><span>{{ post.title }}</span></a>
       {% endif %}
     {% endfor %}
   </div>
