--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,7 +18,7 @@
 .recent-box .recent-title {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
-  color: #311e3e;
+  /*color: #311e3e;*/
   text-align: center;
   margin: 0 0 30px;
 }
@@ -26,7 +26,7 @@
 .recent-box .recent-list .recent-item {
   position: relative;
   display: inline-block;
-  width: 24%;
+  width: 30%;
   height: 150px;
   margin-left: 0.5%;
   margin-bottom: 0.5%;
