--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,7 +26,7 @@
 .recent-box .recent-list .recent-item {
   position: relative;
   display: inline-block;
-  width: 28%;
+  width: 29%;
   height: 150px;
   margin-left: 0.5%;
   margin-bottom: 0.5%;
@@ -39,7 +39,7 @@
   font-size: 12px;
   left: 2.5%;
   bottom: 10%;
-  color: #fff;
+  /*color: #fff;*/
 }
 
 .recent-box .recent-list .recent-item:hover {
