--- a/_includes/post_featured_image.html
+++ b/_includes/post_featured_image.html
@@ -15,9 +15,9 @@
             
 	 {% endif %}
 	      
-
+{% comment %} 
 <meta itemscope itemtype="http://schema.org/Article" />
 <meta itemprop="headline" content="{{ page.title }}" />
 <meta itemprop="description" content="{{ page.meta_description }}" />
 <meta itemprop="image" content="{% if page.image contains "://" %}{{ page.image }}{% else %}{{ page.image | absolute_url }}{% endif %}" />
-
+{% endcomment %}
