--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="{{ site.content_lang }}">
+<html lang="{{ site.content_lang }}"
+      itemscope 
+	   itemtype="http://schema.org/Article" 
+	   prefix="og: http://ogp.me/ns#" >
 <head>
    {% include head.html %}   	 
 </head>
