--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,8 @@
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+{% comment %} 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% endcomment %} 
 <meta http-equiv="Content-Language" content="{{ site.content_lang }}">
 <link rel=”alternate” href=”{{ site.url }}” hreflang=”pt-br” />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,6 +22,8 @@
   <!--Manifest used for enabling PWA-->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="{{ site.manifest_theme_color | default: 'white' }}"/>  
+
+  <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 
  {% include meta/social.html %} 
  {% include meta/favicon.html %}  
