--- a/_includes/meta/social/facebook.html
+++ b/_includes/meta/social/facebook.html
@@ -23,8 +23,8 @@
 {% else %}
    <meta property="og:type" content="website">
 {% endif %}
-<meta property="og:image" content="{{ site.url | replace: 'https://', 'http://' | append: page.image }}">
-<meta property="og:image:secure_url" content="{{ site.url | append: page.image }}">
+<meta property="og:image:secure_url" itemprop="image" content="{{ site.url | append: page.image }}">
+<meta property="og:image" itemprop="image" content="{{ site.url | replace: 'https://', 'http://' | append: page.image }}">
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
