--- a/_includes/meta/social/twitter.html
+++ b/_includes/meta/social/twitter.html
@@ -6,3 +6,4 @@
 <meta name="twitter:description" content="{{ page.meta_description | default site.meta_description | smartify }}">
 <meta name="twitter:url" content="{{ page.url | replace:'/index.html','/' | prepend: site.baseurl | prepend: site.url }}">
 <meta name="twitter:image" content="{% if page.title %}{{ site.url | append: page.image }}{% else %}{{ site.url | append: site.social_image_path }}{% endif %}">
+<meta name="twitter:image:alt" content="{{ page.title }}" />
