--- a/_includes/meta/social/twitter.html
+++ b/_includes/meta/social/twitter.html
@@ -1,6 +1,6 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@{{ site.twitter.username }}" />
-<meta name="twitter:domain" content="{{site.url | replace:'https://','' }}">
+{% comment %}<meta name="twitter:domain" content="{{site.url | replace:'https://','' }}">{% endcomment %}
 <meta name="twitter:creator" content="@{{ site.authors[page.author].twitter }}" />
 <meta name="twitter:title" content="{{ page.title | default: site.title | smartify }}" />
 <meta name="twitter:description" content="{{ page.meta_description | default site.meta_description | smartify }}">
