--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,6 +19,7 @@
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   /*color: #311e3e;*/
+  color: #FFFFFF;
   text-align: center;
   margin: 0 0 30px;
 }
@@ -26,7 +27,7 @@
 .recent-box .recent-list .recent-item {
   position: relative;
   display: inline-block;
-  width: 45%;
+  width: 48%;
   height: 150px;
   margin-left: 0.5%;
   margin-bottom: 0.5%;
