--- a/_includes/landing_page_plbl/faq.html
+++ b/_includes/landing_page_plbl/faq.html
@@ -1,1 +1,101 @@
-.
+<div klickart-sections=""> 
+
+<div id="section-2379105" klickart-edit-component-info="">
+    <link rel="stylesheet" href="css/faq.css">
+    <section class="faq only-questions template" style="background-attachment: scroll; background-image: url("//static-public.klickpages.com.br/uploads/media/file/393979/shutterstock_1054566341.jpg";);">
+        <div class="component-bg" style="background-color: rgba(255, 240, 177, 0);" klickart-edit-background-mask-visible="true">
+        </div>
+        <div class="container">
+            <h3 class="faq-description" style="background-color: rgba(255, 255, 255, 0);">
+            </h3>
+            <h2 class="faq-title" style="font-family: Roboto, sans-serif; font-size: 41px; line-height: 100px; color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);">
+                <b class="medium-b">
+                    Dúvidas frequentes sobre o curso
+                    <br>
+                </b>
+            </h2>
+            <div class="faq-questions" id="klickart-collection-1npov0il7sb000">
+                <div class="faq-question faq-accordion" style="background-attachment: scroll;">
+                    <h3 class="title" style="font-size: 20px;">
+                        <font class="klickart-font" style="color: rgb(0, 181, 156);">
+                            <b class="medium-b">
+                                <font class="klickart-font" style="color: rgb(0, 0, 0);">Qual a duração do curso?</font>
+                            </b>
+                        </font>
+                    </h3>
+                    <div class="content">
+                        <div class="text Medium Medium-rich">
+                             A entrega do conteúdo acontece durante 7 semanas, uma porção por dia, via whatsapp. Você acessa esse conteúdo na sua disponibilidade de tempo. De qualquer forma o conteúdo que você recebe fica a sua disposição indefinidamente, no seu whatsapp.
+                        </div>
+                    </div> 
+                </div>
+                <div class="faq-question faq-accordion" style="background-attachment: scroll;">
+                    <h3 class="title" style="font-size: 20px;">
+                        <font class="klickart-font" style="color: rgb(0, 181, 156);">
+                            <b class="medium-b">
+                                <font class="klickart-font" style="color: rgb(0, 0, 0);">
+                                    Que tipo de resultado terei com o curso?
+                                </font>
+                            </b>
+                        </font>
+                    </h3>
+                    <div class="content">
+                        <div class="text">
+                            Estruturação de rotina diária com tarefas essenciais para manter sua casa de pé com leveza, identificação de focos essenciais para ter a vida pessoal mais organizada, planejamento de manutenção de limpeza continuada para evitar sobrecarga nesse tipo de trabalho.
+                        </div>
+                    </div>
+                </div>
+                <div class="faq-question faq-accordion" style="background-attachment: scroll;">
+                    <h3 class="title" style="font-size: 20px;">
+                        <font class="klickart-font" style="color: rgb(0, 181, 156);">
+                            <b class="medium-b">
+                                <font class="klickart-font" style="color: rgb(0, 0, 0);">
+                                    Como é entregue o conteúdo?
+                                </font>
+                            </b>
+                        </font>
+                    </h3>
+                    <div class="content">
+                        <div class="text">
+                            O conteúdo é gravado em áudio, dividido por passos, focos e temas. Diariamente é entregue via whatsapp, junto com imagem e texto curto.
+                        </div>
+                    </div>
+                </div>
+                <div class="faq-question faq-accordion" style="background-attachment: scroll;">
+                    <h3 class="title" style="font-size: 20px;">
+                        <font class="klickart-font" style="color: rgb(0, 181, 156);">
+                            <b class="medium-b">
+                                <font class="klickart-font" style="color: rgb(0, 0, 0);">
+                                    O curso tem alguma garantia?
+                                </font>
+                            </b>
+                        </font>
+                    </h3>
+                    <div class="content">
+                        <div class="text Medium Medium-rich">
+                            Sim, se você se inscrever e por qualquer motivo quiser o seu dinheiro de volta, basta pedir até 7 dias de sua inscrição. 
+                        </div>
+                    </div>
+                </div>
+                <div class="faq-question faq-accordion" style="background-attachment: scroll;">
+                    <h3 class="title" style="font-size: 18px;">
+                        <font class="klickart-font" style="color: rgb(0, 181, 156);">
+                            <b class="medium-b">
+                                <font class="klickart-font" style="color: rgb(0, 0, 0);">
+                                    Qual o valor do curso?
+                                </font>
+                            </b>
+                        </font>
+                    </h3>
+                    <div class="content">
+                        <div class="text Medium Medium-rich">
+                            O investimento é de R$ 59,00.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+
+    </div>
