--- a/_includes/landing_page_plbl/garantia.html
+++ b/_includes/landing_page_plbl/garantia.html
@@ -1,10 +1,12 @@
-<div id="section-2379111" klickart-edit-component-info="">
-   <link rel="stylesheet" href="//static-public.klickpages.com.br/tmp/zip/342/styles/main.css">
-   <section class="image template-conapnl" style="background-attachment: scroll;">
-      <div class="component-bg" style="background-color: rgb(255, 255, 255);" klickart-edit-background-mask-visible="true"></div>
-      <div class="container">
-         <img src="//static-public.klickpages.com.br/uploads/media/file/521202/7diasgarantia.png" alt="Imagem" style="width: 176px;" klickart-image-source="src">
-         <h3 class="image-description Medium Medium-rich">Até 7 dias depois da inscrição, você pode cancelar por qualquer motivo.</h3>
-      </div>
-   </section>
-</div>
+<!-- 
+------------------------------------------
+--------- Garantia ------------ 
+------------------------------------------
+-->  
+<section class="cid-rcolLMH0J0" id="image1-29">
+    <figure class="mbr-figure container">
+            <div class="image-block" style="width: 34%;">
+                <img src="assets/images/garantia-incondicional-466x404.png"  alt="Garantia Incondicional" title="Garantia Incondicional">  
+            </div>
+    </figure>
+</section>
