--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -11,7 +11,7 @@
 
 <body>
 
-
+{% comment %}
    
       {% include landing_page_plbl\head_video.html %}
       {% include landing_page_plbl\garantia.html %}
@@ -20,6 +20,8 @@
       {% include landing_page_plbl\o_que_vai_aprender.html %}
       {% include landing_page_plbl\faq.html %}
       {% include landing_page_plbl\perfil.html %}
+	
+{% endcomment %}	
 
 </body>
 </html>
