--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -20,7 +20,7 @@
       {% include landing_page_plbl\o_que_vai_aprender.html %}
       {% include landing_page_plbl\faq.html %}
 {% endcomment %}		
-      {% include landing_page_plbl\perfil.html %}
+      {% include landing_page_plbl/perfil.html %}
 	
 
 
