--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -13,12 +13,12 @@
 
 {% comment %}
    
-      {% include landing_page_plbl\head_video.html %}
-      {% include landing_page_plbl\garantia.html %}
-      {% include landing_page_plbl\depoimentos_texto.html %}
-      {% include landing_page_plbl\o_que_e.html %}
-      {% include landing_page_plbl\o_que_vai_aprender.html %}
-      {% include landing_page_plbl\faq.html %}
+      {% include landing_page_plbl/head_video.html %}
+      {% include landing_page_plbl/garantia.html %}
+      {% include landing_page_plbl/depoimentos_texto.html %}
+      {% include landing_page_plbl/o_que_e.html %}
+      {% include landing_page_plbl/o_que_vai_aprender.html %}
+      {% include landing_page_plbl/faq.html %}
 {% endcomment %}		
       {% include landing_page_plbl/perfil.html %}
 	
