--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -5,7 +5,9 @@
       itemtype="http://schema.org/Article" 
       prefix="og: http://ogp.me/ns#" >
 <head>
-	{% include head.html %} 
+	{% comment %}
+	{% include landing_page_plbl/head.html %} 
+	{% comment %}
 </head>
     
 
