--- a/_includes/landing_page_plbl/perfil.html
+++ b/_includes/landing_page_plbl/perfil.html
@@ -1,23 +1,28 @@
-<div klickart-sections=""> 
+<!--
+------------------------------------------
+----------- Perfil ------------
+------------------------------------------
+-->
 
-<div id="section-2379107" klickart-edit-component-info="">
-    <link href="https://fonts.googleapis.com/css?family=Slabo+13px" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/perfil.css">
-    <section class="perfil template" style="background-attachment: scroll;">
-        <div class="component-bg" style="background-color: rgb(239, 242, 248);" klickart-edit-background-mask-visible="true"></div>
-        <div class="container">
-            <div class="box-container">
-                <div class="box">
-                    <div class="col media"> <img class="img-responsive" src="https://denis-vasconcelos.github.io/assets/images/imageedit-6.gif" alt="Imagem" klickart-edit-not-highlight="" style="width: 169px; border-radius: 50%;"> </div>
-                    <div class="col txt">
-                        <div class="description">Eu vou te mostrar que gerenciar o seu tempo nas demandas da casa é mais simples do que você imagina, e que com informação e organização, dá para cuidar de seu lar com mais leveza. Você vai aprender o passo a passo para ter tranquilidade e mais tempo no dia a dia, tudo para que você possa se dedicar ao que mais importa: família, trabalho, projetos pessoais.</div>
-                        <div class="perfil-subtitle"><b class="medium-b"><font class="klickart-font" style="color: rgb(0, 0, 0);">Lidi Vasconcelos</font></b></div>
-                        <div class="perfil-title Medium Medium-rich">Criadora do Projeto Lar Bonito Lar</div>
-                    </div>
-                </div>
+
+<section class="testimonials2 cid-rcohJ20qa9" id="testimonials2-23">
+    <div class="container">
+        <div class="media-container-row">
+            <div class="mbr-figure">
+              <!-- pr-lg-5" style="width: 30%;"-->
+              <img src="/assets/images/imageedit-6.gif" alt="" title="" style="width: 200px;">
+            </div>
+            <div class="media-content px-3 align-self-center mbr-white py-2">
+                    <p class="mbr-text testimonial-text mbr-fonts-style display-7">
+                       Eu vou te mostrar que gerenciar o seu tempo nas demandas da casa é mais simples do que você imagina, e que com informação e organização, dá para cuidar de seu lar com mais leveza. Você vai aprender o passo a passo para ter tranquilidade e mais tempo no dia a dia, tudo para que você possa se dedicar ao que mais importa: família, trabalho, projetos pessoais.
+                    </p>
+                    <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">
+                       Lidi Vasconcelos
+                    </p>
+                    <p class="mbr-author-desc mbr-fonts-style display-7">
+                       Criadora do Projeto Lar Bonito Lar
+                    </p>
             </div>
         </div>
-    </section>
-</div>
-  
-</div>
+    </div>
+</section>
