--- a/_includes/landing_page_plbl/faq.html
+++ b/_includes/landing_page_plbl/faq.html
@@ -1,101 +1,91 @@
-<div klickart-sections=""> 
+<!--
+------------------------------------------
+----------- Dúvidas frequentes ------------
+------------------------------------------
+-->
 
-<div id="section-2379105" klickart-edit-component-info="">
-    <link rel="stylesheet" href="css/faq.css">
-    <section class="faq only-questions template" style="background-attachment: scroll; background-image: url("//static-public.klickpages.com.br/uploads/media/file/393979/shutterstock_1054566341.jpg";);">
-        <div class="component-bg" style="background-color: rgba(255, 240, 177, 0);" klickart-edit-background-mask-visible="true">
-        </div>
+<section class="toggle1 cid-rbK1YNlIvq" id="toggle1-1g">
         <div class="container">
-            <h3 class="faq-description" style="background-color: rgba(255, 255, 255, 0);">
-            </h3>
-            <h2 class="faq-title" style="font-family: Roboto, sans-serif; font-size: 41px; line-height: 100px; color: rgb(255, 255, 255); background-color: rgb(0, 0, 0);">
-                <b class="medium-b">
-                    Dúvidas frequentes sobre o curso
-                    <br>
-                </b>
-            </h2>
-            <div class="faq-questions" id="klickart-collection-1npov0il7sb000">
-                <div class="faq-question faq-accordion" style="background-attachment: scroll;">
-                    <h3 class="title" style="font-size: 20px;">
-                        <font class="klickart-font" style="color: rgb(0, 181, 156);">
-                            <b class="medium-b">
-                                <font class="klickart-font" style="color: rgb(0, 0, 0);">Qual a duração do curso?</font>
-                            </b>
-                        </font>
-                    </h3>
-                    <div class="content">
-                        <div class="text Medium Medium-rich">
-                             A entrega do conteúdo acontece durante 7 semanas, uma porção por dia, via whatsapp. Você acessa esse conteúdo na sua disponibilidade de tempo. De qualquer forma o conteúdo que você recebe fica a sua disposição indefinidamente, no seu whatsapp.
-                        </div>
-                    </div> 
-                </div>
-                <div class="faq-question faq-accordion" style="background-attachment: scroll;">
-                    <h3 class="title" style="font-size: 20px;">
-                        <font class="klickart-font" style="color: rgb(0, 181, 156);">
-                            <b class="medium-b">
-                                <font class="klickart-font" style="color: rgb(0, 0, 0);">
-                                    Que tipo de resultado terei com o curso?
-                                </font>
-                            </b>
-                        </font>
-                    </h3>
-                    <div class="content">
-                        <div class="text">
-                            Estruturação de rotina diária com tarefas essenciais para manter sua casa de pé com leveza, identificação de focos essenciais para ter a vida pessoal mais organizada, planejamento de manutenção de limpeza continuada para evitar sobrecarga nesse tipo de trabalho.
-                        </div>
+            <div class="media-container-row">
+                <div class="accordion-content">
+                    <div class="section-head text-center space30">
+                       <h2 class="mbr-section-title mbr-fonts-style display-2">Dúvidas frequentes sobre o curso</h2>
                     </div>
-                </div>
-                <div class="faq-question faq-accordion" style="background-attachment: scroll;">
-                    <h3 class="title" style="font-size: 20px;">
-                        <font class="klickart-font" style="color: rgb(0, 181, 156);">
-                            <b class="medium-b">
-                                <font class="klickart-font" style="color: rgb(0, 0, 0);">
-                                    Como é entregue o conteúdo?
-                                </font>
-                            </b>
-                        </font>
-                    </h3>
-                    <div class="content">
-                        <div class="text">
-                            O conteúdo é gravado em áudio, dividido por passos, focos e temas. Diariamente é entregue via whatsapp, junto com imagem e texto curto.
+                    <div class="clearfix"></div>
+                    <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
+                        <div class="card">
+                            <div class="card-header" role="tab" id="headingOne">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_44" aria-expanded="false" aria-controls="collapse1">
+                                    <h4 class="mbr-fonts-style display-5">
+                                        <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Qual a duração do curso?</h4>
+                                </a>
+                            </div>
+                            <div id="collapse1_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div class="panel-body p-4">
+                                    <p class="mbr-fonts-style panel-text display-7">
+                                       A entrega do conteúdo acontece durante 7 semanas, uma porção por dia, via whatsapp. Você acessa esse conteúdo na sua disponibilidade de tempo. De qualquer forma o conteúdo que você recebe fica a sua disposição indefinidamente, no seu whatsapp.  </p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="faq-question faq-accordion" style="background-attachment: scroll;">
-                    <h3 class="title" style="font-size: 20px;">
-                        <font class="klickart-font" style="color: rgb(0, 181, 156);">
-                            <b class="medium-b">
-                                <font class="klickart-font" style="color: rgb(0, 0, 0);">
-                                    O curso tem alguma garantia?
-                                </font>
-                            </b>
-                        </font>
-                    </h3>
-                    <div class="content">
-                        <div class="text Medium Medium-rich">
-                            Sim, se você se inscrever e por qualquer motivo quiser o seu dinheiro de volta, basta pedir até 7 dias de sua inscrição. 
+                        <div class="card">
+                            <div class="card-header" role="tab" id="headingTwo">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_44" aria-expanded="false" aria-controls="collapse2">
+                                    <h4 class="mbr-fonts-style display-5">
+                                        <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Que tipo de resultado terei com o curso?</h4>
+                                </a>
+
+                            </div>
+                            <div id="collapse2_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div class="panel-body p-4">
+                                    <p class="mbr-fonts-style panel-text display-7">
+                                       Estruturação de rotina diária com tarefas essenciais para manter sua casa de pé com leveza, identificação de focos essenciais para ter a vida pessoal mais organizada, planejamento de manutenção de limpeza continuada para evitar sobrecarga nesse tipo de trabalho.   </p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="faq-question faq-accordion" style="background-attachment: scroll;">
-                    <h3 class="title" style="font-size: 18px;">
-                        <font class="klickart-font" style="color: rgb(0, 181, 156);">
-                            <b class="medium-b">
-                                <font class="klickart-font" style="color: rgb(0, 0, 0);">
-                                    Qual o valor do curso?
-                                </font>
-                            </b>
-                        </font>
-                    </h3>
-                    <div class="content">
-                        <div class="text Medium Medium-rich">
-                            O investimento é de R$ 59,00.
+                        <div class="card">
+                            <div class="card-header" role="tab" id="headingThree">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_44" aria-expanded="false" aria-controls="collapse3">
+                                    <h4 class="mbr-fonts-style display-5">
+                                        <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Como é entregue o conteúdo?</h4>
+                                </a>
+                            </div>
+                            <div id="collapse3_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div class="panel-body p-4">
+                                    <p class="mbr-fonts-style panel-text display-7">O conteúdo é gravado em áudio, dividido por passos, focos e temas. Diariamente é entregue via whatsapp, junto com imagem e texto curto. </p>
+                                </div>
+                            </div>
                         </div>
+                        <div class="card">
+                            <div class="card-header" role="tab" id="headingThree">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse4_44" aria-expanded="false" aria-controls="collapse4">
+                                    <h4 class="mbr-fonts-style display-5">
+                                        <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>O curso tem alguma garantia?</h4>
+                                </a>
+                            </div>
+                            <div id="collapse4_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div class="panel-body p-4">
+                                    <p class="mbr-fonts-style panel-text display-7">
+                                       Sim, se você se iniciar o curso e avaliar que ele não é para você, basta pedir seu dinheiro de volta até 7 dias do início do curso.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" role="tab" id="headingThree">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse5_44" aria-expanded="false" aria-controls="collapse5">
+                                    <h4 class="mbr-fonts-style display-5">
+                                        <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Qual o valor do curso?</h4>
+                                </a>
+                            </div>
+                            <div id="collapse5_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div class="panel-body p-4">
+                                    <p class="mbr-fonts-style panel-text display-7">
+                                       O investimento é de R$ 59,00. </p>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-</div>
-
-    </div>
+</section>
