--- a/_includes/landing_page_plbl/o_que_vai_aprender.html
+++ b/_includes/landing_page_plbl/o_que_vai_aprender.html
@@ -5,9 +5,12 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
-                    <li><strong>MOBILE FRIENDLY</strong> - Você vai aprender a administrar melhor o tempo dedicado às demandas da casa</li>
-                    <li><strong>EASY AND SIMPLE</strong> - Você vai montar um fluxo de organização eficiente que te ajude nesse trabalho</li>
-                    <li><strong>UNIQUE STYLES</strong> - Você vai aprender a se organizar em outros aspectos importantes na sua vida, e não apenas na gestão do lar, que vão te conectar com o que de fato importa.&nbsp;<a href="https://mobirise.co/">Try it now!</a></li><li>Você vai se sentir mais relaxada em sua casa, reduzindo o seu estresse &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li><li>Você vai ser uma mulher que se preocupa menos com as demandas da casa, porque saberá que existe um planejamento que te orienta na execução das tarefas de maneira organizada, sem sobrecarga, e cada coisa no tempo certo.&nbsp;</li><li>Você vai se sentir mais tranquila e leve, porque terá mudado a forma como sente a relação com o trabalho ligado ao seu lar.&nbsp;</li>
+                    <li><strong>Foco no essencial</strong> - Você vai aprender a administrar melhor o tempo dedicado às demandas da casa</li>
+                    <li><strong>Simplicidade e eficiência</strong> - Você vai montar um fluxo de organização eficiente que te ajude nesse trabalho</li>
+                    <li><strong>Organização pessoal</strong> - Você vai aprender a se organizar em outros aspectos importantes na sua vida, e não apenas na gestão do lar, que vão te conectar com o que de fato importa</li>
+                    <li><strong>Mais que casa, um lar</strong> - Você vai se sentir mais relaxada em sua casa, reduzindo o seu estresse</li>
+                    <li><strong>Tempo para você</strong> - Você vai ser uma mulher que se preocupa menos com as demandas da casa, porque saberá que existe um planejamento que te orienta na execução das tarefas de maneira organizada, sem sobrecarga, e cada coisa no tempo certo</li>
+                    <li><strong>Autocuidado</strong> - Você vai se sentir mais tranquila e leve, porque terá mudado a forma como sente a relação com o trabalho ligado ao seu lar</li>
                 </ol>
             </div>
         </div>
