--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html 
       itemscope 
       itemtype="http://schema.org/Article" 
@@ -13,18 +12,15 @@
 
 <body>
 
-{% comment %}
-{% endcomment %}  
       {% include landing_page_plbl/head_video.html %}
       {% include landing_page_plbl/garantia.html %}
       {% include landing_page_plbl/depoimentos_texto.html %}
       {% include landing_page_plbl/o_que_e.html %}
       {% include landing_page_plbl/o_que_vai_aprender.html %}
       {% include landing_page_plbl/faq.html %}
-		
       {% include landing_page_plbl/perfil.html %}
+      {% include landing_page_plbl/scripts.html %}	
 	
-
 
 </body>
 </html>
