--- a/_includes/landing_page_plbl/perfil.html
+++ b/_includes/landing_page_plbl/perfil.html
@@ -17,7 +17,7 @@
                        Eu vou te mostrar que gerenciar o seu tempo nas demandas da casa é mais simples do que você imagina, e que com informação e organização, dá para cuidar de seu lar com mais leveza. Você vai aprender o passo a passo para ter tranquilidade e mais tempo no dia a dia, tudo para que você possa se dedicar ao que mais importa: família, trabalho, projetos pessoais.
                     </p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">
-                       Lidi Vasconcelos
+                       Lidiane Vasconcelos
                     </p>
                     <p class="mbr-author-desc mbr-fonts-style display-7">
                        Criadora do Projeto Lar Bonito Lar
