--- a/_includes/landing_page_plbl/faq.html
+++ b/_includes/landing_page_plbl/faq.html
@@ -65,7 +65,7 @@
                             <div id="collapse4_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       Sim, se você se iniciar o curso e avaliar que ele não é para você, basta pedir seu dinheiro de volta até 7 dias do início do curso.</p>
+                                       Sim, se você iniciar o curso e avaliar que ele não é para você, basta pedir seu dinheiro de volta até 7 dias do início do curso.</p>
                                 </div>
                             </div>
                         </div>
