--- a/_includes/meta/social/google.html
+++ b/_includes/meta/social/google.html
@@ -5,5 +5,5 @@
 
 <!-- Schema.org markup for Google+ -->
 <meta itemprop="name" content="{{ page.title | default: site.title | smartify }}" />
-<meta itemprop="description" content="{{ page.meta_description | default: site.meta_description | smartify }} />
+<meta itemprop="description" content="{{ page.meta_description | default: site.meta_description | smartify }}" />
 <meta itemprop="image" content="{{ site.url | append: page.image }}" />
