--- a/_includes/meta/favicon.html
+++ b/_includes/meta/favicon.html
@@ -1,14 +1,14 @@
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png?v5=69P2nGxPlB"">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png?v5=69P2nGxPlB"">
-<link rel="icon" type="image/png" sizes="194x194" href="/assets/images/favicon/favicon-194x194.png?v5=69P2nGxPlB"">
-<link rel="icon" type="image/png" sizes="192x192" href="/assets/images/favicon/android-chrome-192x192.png?v5=69P2nGxPlB"">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png?v5=69P2nGxPlB"">
-<link rel="manifest" href="/assets/images/favicon/site.webmanifest?v5=69P2nGxPlB"">
-<link rel="mask-icon" href="/assets/images/favicon/safari-pinned-tab.svg?v5=69P2nGxPlB"" color="#bb4444">
-<link rel="shortcut icon" href="/assets/images/favicon/favicon.ico?v5=69P2nGxPlB"">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png?v5=69P2nGxPlB">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png?v5=69P2nGxPlB">
+<link rel="icon" type="image/png" sizes="194x194" href="/assets/images/favicon/favicon-194x194.png?v5=69P2nGxPlB">
+<link rel="icon" type="image/png" sizes="192x192" href="/assets/images/favicon/android-chrome-192x192.png?v5=69P2nGxPlB">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png?v5=69P2nGxPlB">
+<link rel="manifest" href="/assets/images/favicon/site.webmanifest?v5=69P2nGxPlB">
+<link rel="mask-icon" href="/assets/images/favicon/safari-pinned-tab.svg?v5=69P2nGxPlB" color="#bb4444">
+<link rel="shortcut icon" href="/assets/images/favicon/favicon.ico?v5=69P2nGxPlB">
 <meta name="apple-mobile-web-app-title" content="Lidiane Vasconcelos">
 <meta name="application-name" content="Lidiane Vasconcelos">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-TileImage" content="/assets/images/favicon/mstile-144x144.png?v5=69P2nGxPlB"">
-<meta name="msapplication-config" content="/assets/images/favicon/browserconfig.xml?v5=69P2nGxPlB"">
+<meta name="msapplication-TileImage" content="/assets/images/favicon/mstile-144x144.png?v5=69P2nGxPlB">
+<meta name="msapplication-config" content="/assets/images/favicon/browserconfig.xml?v5=69P2nGxPlB">
 <meta name="theme-color" content="#ffffff">
