--- a/_includes/landing_page_plbl/faq.html
+++ b/_includes/landing_page_plbl/faq.html
@@ -23,7 +23,7 @@
                             <div id="collapse1_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       A entrega do conteúdo acontece durante 7 semanas, uma porção por dia, via whatsapp. Você acessa esse conteúdo na sua disponibilidade de tempo. De qualquer forma o conteúdo que você recebe fica a sua disposição indefinidamente, no seu whatsapp.  </p>
+                                       A entrega do conteúdo acontece durante 30 dias, uma porção diária, via whatsapp. Você acessa esse conteúdo na sua disponibilidade de tempo. De qualquer forma o conteúdo que você recebe fica a sua disposição indefinidamente, no seu whatsapp. </p>
                                 </div>
                             </div>
                         </div>
@@ -51,7 +51,7 @@
                             </div>
                             <div id="collapse3_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7">O conteúdo é gravado em áudio, dividido por passos, focos e temas. Diariamente é entregue via whatsapp, junto com imagem e texto curto. </p>
+                                    <p class="mbr-fonts-style panel-text display-7">O conteúdo é gravado em áudio, dividido por passos, focos e temas. Diariamente é entregue via whatsapp, imagem e áudio. </p>
                                 </div>
                             </div>
                         </div>
