--- a/_includes/landing_page_plbl/head_video.html
+++ b/_includes/landing_page_plbl/head_video.html
@@ -21,7 +21,8 @@
             </div>
             <div class="mbr-figure">
                 <!-- <img src="/assets/images/imagem-landingpage-648-1024x648.png" alt="" title="" style="width: 75%;"> -->
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/a6XfiBKAzR4?cc_load_policy=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/a6XfiBKAzR4?cc_load_policy=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+                <iframe  src="https://www.youtube.com/embed/a6XfiBKAzR4?controls=0?cc_load_policy=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
